--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programmer Portfolio</title>
-    <!-- Font Awesome for Icons -->
+    <title> Mayor Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2eO2zD+xN/H5A9K4vLhF/WfPqC02M4F4O+T1eN0q9g9LwzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <!-- Inter Font -->
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
       body {
@@ -49,7 +45,6 @@
     </header>
 
     <main class="pt-24">
-        <!-- Home Section -->
         <section id="home" class="h-screen flex items-center justify-center text-center px-4">
             <div>
                 <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-white mb-4 animate-fade-in-down">Hi, I'm <span class="text-emerald-400">Mark Aaron A. Mayor</span>.</h1>
@@ -60,7 +55,6 @@
             </div>
         </section>
 
-        <!-- About Section -->
         <section id="about" class="py-20 md:py-32 bg-slate-800">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl sm:text-4xl font-bold text-center text-white mb-12">About Me</h2>
@@ -80,7 +74,6 @@
             </div>
         </section>
 
-        <!-- Projects Section -->
         <section id="projects" class="py-20 md:py-32">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl sm:text-4xl font-bold text-center text-white mb-12">My Projects</h2>
@@ -140,9 +133,7 @@
             </div>
         </section>
 
-        <!-- The Modal -->
         <div id="project-modal" class="modal">
-            <!-- Modal content -->
             <div class="modal-content">
                 <span class="close-btn">&times;</span>
                 <h3 id="modal-title" class="text-2xl font-bold text-emerald-400 mb-4"></h3>
@@ -150,7 +141,6 @@
             </div>
         </div>
 
-        <!-- Contact Section -->
         <section id="contact" class="py-20 md:py-32 bg-slate-800">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl sm:text-4xl font-bold text-center text-white mb-12">Get in Touch</h2>
@@ -166,7 +156,7 @@
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </div>
-                    <!-- Contact Form -->
+
                     <form class="space-y-4">
                         <input type="text" placeholder="Your Name" class="w-full bg-slate-900 border border-slate-700 rounded-lg py-3 px-4 text-gray-300 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-emerald-400">
                         <input type="email" placeholder="Your Email" class="w-full bg-slate-900 border border-slate-700 rounded-lg py-3 px-4 text-gray-300 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-emerald-400">
@@ -180,12 +170,11 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-slate-900 text-center py-8 text-gray-500 text-sm">
         <p>&copy; 2024 Mark Aaron A. Mayor. All rights reserved.</p>
     </footer>
 
-    <!-- JavaScript File -->
     <script src="script.js"></script>
 </body>
 </html>
+
