--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Mayor Portfolio</title>
+    <title> Mayor Portfolio </title>
+    <link rel="icon" type="image/x-icon" href="Images/Profile.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2eO2zD+xN/H5A9K4vLhF/WfPqC02M4F4O+T1eN0q9g9LwzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
@@ -177,4 +178,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
